<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ddt_back"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/top_bg" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shop_title"
            android:textColor="@color/ddt_white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shop_add_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="7dp"
            android:background="@drawable/top_add" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/shop_add_noshop_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ddt_back"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="14dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shop_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/ddt_transparent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shop_gray_tip"
                android:textColor="@color/ddt_text_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shop_black_tip"
                android:textColor="@color/ddt_text_black"
                android:textSize="17sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/popup_box_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/ddt_white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nearby_shop"
                android:textColor="@color/ddt_black"
                android:textSize="14sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/shop_add_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@color/ddt_transparent"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/shop_add_dot01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/shop_slide_off" />

                <ImageView
                    android:id="@+id/shop_add_dot02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/shop_slide_off" />

                <ImageView
                    android:id="@+id/shop_add_dot03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/shop_slide_on" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/shop_add_hasshop_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/ddt_back">
        <GridView
            android:id="@+id/shop_add_hasshop_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"/>
        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bottom_bg" />

</LinearLayout>