<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ddt_transparent"
    android:gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ddt_transparent" >

        <ImageView
            android:id="@+id/simple_shop_linear_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shop_list_logo" />
		
        <ImageView
            android:id="@+id/simple_shop_linear_gz_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shop_guanzhu_bg"/>
        <TextView
            android:id="@+id/simple_shop_linear_gz_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:textColor="@color/ddt_white"
            android:textSize="12sp"
            android:text="@string/ygz"/>
        <ImageView
            android:id="@+id/simple_shop_linear_pic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ddt_transparent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ddt_transparent"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/simple_shop_linear_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v"
                android:textColor="@color/ddt_green"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/simple_shop_linear_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/ddt_black"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/simple_shop_linear_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ddt_text_gray"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>